--- a/src/Hayman Fire Recovery Assignment 2.Rmd
+++ b/src/Hayman Fire Recovery Assignment 2.Rmd
@@ -3,6 +3,14 @@ title: "Hayman Fire Recovery"
 author: "Mikaela Richardson"
 date: "01/31/2022"
 output: html_document
+
+knit: (function(input, ...) {
+    rmarkdown::render(
+      input,
+      output_file = 'index',
+      output_dir='../'
+    )
+  })
 ---
 
 ```{r setup, warning=F,message=F}
